--- a/index.html
+++ b/index.html
@@ -289,6 +289,26 @@
             </div>
           </div>
         </div>
+
+         <!-- ****** STUDENTS *******-->
+      <section id="students" class="container bg-light p-3">
+        <h2 class="display-6 text-danger">OUR STUDENTS</h2>
+        <div class="row flex-wrap-reverse align-items-center">
+          <div class="col-md-6">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur
+              dolor saepe, cumque voluptates omnis sint quos, perspiciatis
+              tenetur neque nihil mollitia hic animi corporis totam soluta error
+              officia, quis quasi?
+            </p>
+            <button class="btn btn-danger">Learn More</button>
+          </div>
+          <div class="col-md-6">
+            <img src="./img/students1.png" width="70%" alt="students" />
+          </div>
+        </div>
+      </section>
+      <!-- ****** COURSES *******-->
       </section>
     <script src="./lib/fslightbox.js"></script>
     <script
