--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </button>
     </div>
 
-     <!-- ***** ABOUT ***** -->
+    <!-- ***** ABOUT ***** -->
     <main class="text-center">
       <section id="about" class="container bg-light p-3">
         <h2 class="text-danger display-6">ABOUT US</h2>
@@ -289,8 +289,8 @@
             </div>
           </div>
         </div>
-
-         <!-- ****** STUDENTS *******-->
+      </section>
+      <!-- ****** STUDENTS *******-->
       <section id="students" class="container bg-light p-3">
         <h2 class="display-6 text-danger">OUR STUDENTS</h2>
         <div class="row flex-wrap-reverse align-items-center">
@@ -309,7 +309,297 @@
         </div>
       </section>
       <!-- ****** COURSES *******-->
+      <section id="courses" class="container bg-dark p-3">
+        <h2 class="display-6 text-danger">COURSES</h2>
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link active"
+              id="pills-home-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#fs-images"
+              type="button"
+              role="tab"
+              aria-controls="fs-images"
+              aria-selected="true"
+            >
+              Full-Stack
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link"
+              id="pills-profile-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#ds-images"
+              type="button"
+              role="tab"
+              aria-controls="pills-profile"
+              aria-selected="false"
+            >
+              Data-Science
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link"
+              id="pills-contact-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#dev-images"
+              type="button"
+              role="tab"
+              aria-controls="pills-contact"
+              aria-selected="false"
+            >
+              Devops
+            </button>
+          </li>
+        </ul>
+        <div class="tab-content" id="pills-tabContent">
+          <div
+            class="tab-pane fade show active"
+            id="fs-images"
+            role="tabpanel"
+            aria-labelledby="pills-home-tab"
+            tabindex="0"
+          >
+            <div class="row g-2">
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/fs1.jpg">
+                  <img
+                    src="./img/thumbnail/fs1.jpg"
+                    class="img-thumbnail"
+                    alt="fs1"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/fs2.jpg">
+                  <img
+                    src="./img/thumbnail/fs2.jpg"
+                    class="img-thumbnail"
+                    alt="fs2"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/fs3.jpg">
+                  <img
+                    src="./img/thumbnail/fs3.jpg"
+                    class="img-thumbnail"
+                    alt="fs3"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/fs4.jpg">
+                  <img
+                    src="./img/thumbnail/fs4.jpg"
+                    class="img-thumbnail"
+                    alt="fs4"
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
+          <div
+            class="tab-pane fade"
+            id="ds-images"
+            role="tabpanel"
+            aria-labelledby="pills-profile-tab"
+            tabindex="0"
+          >
+            <div class="row g-2">
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/ds1.jpg">
+                  <img
+                    src="./img/thumbnail/ds1.jpg"
+                    class="img-thumbnail"
+                    alt="ds1"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/ds2.jpg">
+                  <img
+                    src="./img/thumbnail/ds2.jpg"
+                    class="img-thumbnail"
+                    alt="ds2"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/ds3.jpg">
+                  <img
+                    src="./img/thumbnail/ds3.jpg"
+                    class="img-thumbnail"
+                    alt="ds3"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/ds4.jpg">
+                  <img
+                    src="./img/thumbnail/ds4.jpg"
+                    class="img-thumbnail"
+                    alt="ds4"
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
+          <div
+            class="tab-pane fade"
+            id="dev-images"
+            role="tabpanel"
+            aria-labelledby="pills-contact-tab"
+            tabindex="0"
+          >
+            <div class="row g-2">
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/ops1.jpg">
+                  <img
+                    src="./img/thumbnail/ops1.jpg"
+                    class="img-thumbnail"
+                    alt="ops1"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/ops2.jpg">
+                  <img
+                    src="./img/thumbnail/ops2.jpg"
+                    class="img-thumbnail"
+                    alt="ops2"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/ops3.jpg">
+                  <img
+                    src="./img/thumbnail/ops3.jpg"
+                    class="img-thumbnail"
+                    alt="ops3"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="./img/thumbnail/ops4.jpg">
+                  <img
+                    src="./img/thumbnail/ops4.jpg"
+                    class="img-thumbnail"
+                    alt="ops4"
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
+
+      <!-- ****** CONTACT *******-->
+      <section id="contact" class="container bg-light p-3">
+        <h2 class="display-6 text-danger">CONTACT</h2>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, hic
+            dolorum? Explicabo dolorem officia non molestiae ipsa laudantium
+            aliquam, eius quidem omnis perferendis voluptatum magni perspiciatis
+            accusantium fugiat placeat est?
+          </p>
+          <div class="row g-3">
+            <div class="col-md-4">
+              <i class="fas fa-phone fa-2x text-danger"></i>
+              <h5>Telephone</h5>
+              <a href="tel:+905555555555">+905555555555</a>
+            </div>
+            <div class="col-md-4">
+              <i class="fab fa-whatsapp fa-2x text-danger"></i>
+              <h5>Whatsapp</h5>
+              <a href="https://wa.me/+905555555555">+905555555555</a>
+            </div>
+            <div class="col-md-4">
+              <i class="fas fa-envelope fa-2x text-danger"></i>
+              <h5>E-mail</h5>
+              <a href="mailto:info@clarusway.com">info@clarusway.com</a>
+            </div>
+          </div>
+          <form class="row g-3 mt-3">
+            <div class="col-md-6">
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                placeholder="Enter name"
+              />
+            </div>
+            <div class="col-md-6">
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="Enter email"
+              />
+            </div>
+            <div class="col-12">
+              <input
+                type="text"
+                class="form-control"
+                id="subject"
+                placeholder="Enter subject"
+              />
+            </div>
+            <div class="col-12">
+              <div class="form-floating">
+                <textarea
+                  class="form-control"
+                  placeholder="Enter your comment"
+                  id="floatingTextarea"
+                ></textarea>
+                <label for="floatingTextarea">Enter your comment</label>
+              </div>
+            </div>
+            <div class="col-12">
+              <button class="btn btn-danger px-5">Submit</button>
+            </div>
+          </form>
+        </article>
+        <article id="location" class="mt-4">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d114076.87257137455!2d-80.0397125!3d26.683608!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d8d6f618523787%3A0x3ba092c7d7a6471a!2sPalm%20Beach%2C%20FL%2C%20USA!5e0!3m2!1sen!2str!4v1685789359428!5m2!1sen!2str"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </article>
+      </section>
+    </main>
+
+    <!-- **** FOOTER **** -->
+    <footer class="bg-dark text-center text-white p-4">
+      <div class="p-3 fa-2x">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-youtube"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
+      <div class="p-2 h6">
+        &copy
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        Copyright by Clarusway
+      </div>
+    </footer>
+
+    <!-- ***UP-BUTTON*** -->
+    <a class="btn-up" href="#body">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+
     <script src="./lib/fslightbox.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
